--- a/themes/zephyr/front-end/src/components/component-grid-images/index.html
+++ b/themes/zephyr/front-end/src/components/component-grid-images/index.html
@@ -6,7 +6,7 @@
   <section class="component-grid-images">
     <div class="container">
       <div class="gide-wrapper">
-        <div class="card card-one">
+        <div class="card iv-st-from-bottom  card-one">
           <div class="image-wrapper image-wrapper-2">
             <img  src="../../html/images/phone-2%20.png" alt="image">
           </div>
@@ -15,7 +15,7 @@
             <h4 class="headline-4 real-line-up">Democratising financial wellbeing.</h4>
           </div>
         </div>
-        <div class="card card-two">
+        <div class="card iv-st-from-bottom  card-two">
           <div class="image-wrapper image-wrapper-4">
             <img  src="../../html/images/meeting%20.png" alt="image">
           </div>
@@ -24,7 +24,7 @@
             <h4 class="headline-4 real-line-up">Creating a leading international speakers bureau</h4>
           </div>
         </div>
-        <div class="card card-three">
+        <div class="card iv-st-from-bottom  card-three">
           <div class="image-wrapper image-wrapper-3">
             <img  src="../../html/images/pangaea%20.png" alt="image">
           </div>
@@ -33,7 +33,7 @@
             <h4 class="headline-4 real-line-up">Uncover a new wave of medical research</h4>
           </div>
         </div>
-        <div class="card card-four">
+        <div class="card iv-st-from-bottom  card-four">
           <div class="image-wrapper image-wrapper-5">
             <img  src="../../html/images/phone%20.png" alt="image">
           </div>
