--- a/themes/zephyr/front-end/src/components/component-logo/style.scss
+++ b/themes/zephyr/front-end/src/components/component-logo/style.scss
@@ -2,6 +2,14 @@
 @import "src/styles/mixins";
 
 section.component-logo {
+    margin-top: size(150);
+    @include min-small-screen {
+        margin-top: size(120);
+    }
+    @include x-large-screen {
+        margin-top: size(215);
+    }
+    
     .headline-1 {
         max-width: size(320);
         margin: 0 auto size(45);
