add new block our journey done 70%

--- a/themes/zephyr/front-end/src/components/component-our-journey/style.scss
+++ b/themes/zephyr/front-end/src/components/component-our-journey/style.scss
@@ -62,7 +62,7 @@ section.component-our-journey {
                     }
                     @include marginX(auto);
                 }
-                svg{
+                img{
                     margin-bottom: size(16);
                 }
                 &.milky{
