--- a/themes/zephyr/front-end/src/components/component-sector-expertise-image-2/style.scss
+++ b/themes/zephyr/front-end/src/components/component-sector-expertise-image-2/style.scss
@@ -2,9 +2,10 @@
 @import "src/styles/mixins";
 
 section.component-sector-expertise-image-2 {
-    @include marginY(size(84), size(63));
+    display: none;
     @include min-medium-screen {
-        @include marginY(size(292), size(94));
+        @include marginY(size(89), size(152));
+        display: block;
     }
     padding-bottom: 200px;
     .image-1 {
