header on scroll change background not working with smooth scroll

--- a/themes/zephyr/front-end/src/components/header-component/style.scss
+++ b/themes/zephyr/front-end/src/components/header-component/style.scss
@@ -5,7 +5,10 @@ header {
     position: fixed;
     z-index: 99;
     width: 100%;
-    
+    transition: background-color 400ms;
+    &.active{
+        background: $zephyr-white;
+    }
     .header-content {
         display: flex;
         align-items: center;
