--- a/themes/zephyr/template-parts/blocks/template-component/style.css
+++ b/themes/zephyr/template-parts/blocks/template-component/style.css
@@ -1,7 +1,4 @@
-section.template-component {
-    background-color: red;
-    height: 100vh
-}
+section.template-component{background-color:red;height:100vh}
 
 
 /*# sourceMappingURL=style.css.map*/
