--- a/themes/zephyr/front-end/src/styles/pages/_sector-expertise2.scss
+++ b/themes/zephyr/front-end/src/styles/pages/_sector-expertise2.scss
@@ -2,31 +2,35 @@
     .component-hero {
         .content {
             text-align: center;
-            padding-top: size(203);
+            
             .headline-1 {
-                max-width: size(220);
-                @include min-x-small-screen{
+                max-width: size(330);
+                @include marginY(size(30));
+                @include min-x-small-screen {
                     max-width: 100%;
+                }
+                @include min-medium-screen{
+                    line-height: size(72);
                 }
                 @include x-large-screen {
                     font-size: size(60);
-                    line-height: size(72);
-                    @include marginY(size(25) ,size(26));
                     max-width: size(788);
+                    @include marginY(size(28), size(22));
                 }
             }
             
             .paragraph {
-                @include x-large-screen{
+                @include x-large-screen {
                     max-width: size(910);
                 }
             }
         }
     }
-    .component-success-stories{
+    
+    .component-success-stories {
         @include marginY(size(140));
-       @include min-medium-screen{
-           @include marginY(size(374),size(185));
-       }
+        @include min-medium-screen {
+            @include marginY(size(374), size(185));
+        }
     }
 }
