--- a/themes/zephyr/front-end/src/components/footer-component/style.scss
+++ b/themes/zephyr/front-end/src/components/footer-component/style.scss
@@ -36,10 +36,10 @@ footer {
                 text-align: center;
                 margin-top: size(20);
                 display: block;
+                
                 @include x-large-screen {
-                    font-size: size(14);
                     line-height: size(24);
-                    max-width: size(202);
+                    max-width: size(220);
                     text-align: left;
                 }
             }
@@ -54,7 +54,7 @@ footer {
             }
             @include x-large-screen {
                 flex-direction: row-reverse;
-                min-width: size(790);
+                min-width: size(810);
                 flex-wrap: nowrap;
             }
             
@@ -71,7 +71,7 @@ footer {
                 }
                 
                 .headline-7 {
-                    margin-bottom: size(12);
+                    margin-bottom: size(10);
                 }
                 
                 // link
@@ -86,6 +86,8 @@ footer {
                     }
                     
                     .paragraph {
+                        color: $zephyr-gray-light;
+                        font-size: size(14);
                         line-height: size(32);
                         transition: all 400ms ease-in-out;
                         overflow: hidden;
@@ -139,9 +141,9 @@ footer {
                         flex-basis: 100%;
                     }
                     @include x-large-screen {
-                        margin: 0;
                         order: 0;
                         flex-basis: auto;
+                        margin: 0 0 0 size(120);
                     }
                     
                     input {
@@ -213,6 +215,12 @@ footer {
                         order: 0;
                     }
                     
+                    .headline-7{
+                        margin-bottom: 0;
+                        @include x-large-screen {
+                            margin-bottom: size(12);
+                        }
+                    }
                     .link {
                         display: flex;
                         flex-wrap: wrap;
