--- a/themes/zephyr/front-end/src/components/header-component/index.html
+++ b/themes/zephyr/front-end/src/components/header-component/index.html
@@ -6,20 +6,12 @@
     <div class="container">
       <div class="header-content">
         <!--      burger menu and cross-->
-        <div class="menu-and-cross">
-          <div class="menu">
-            <svg width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <line x1="28" y1="0.75" x2="-6.79088e-08" y2="0.749997" stroke="#fefefd" stroke-width="1.5"/>
-              <line x1="28" y1="9.75" x2="-6.7828e-08" y2="9.75" stroke="#fefefd" stroke-width="1.5"/>
-              <line x1="28" y1="18.75" x2="-6.7828e-08" y2="18.75" stroke="#fefefd" stroke-width="1.5"/>
-            </svg>
-          </div>
-          <div class="cross">
-            <svg  width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <line x1="1.46967" y1="19.1474" x2="19.1473" y2="1.46974" stroke="#fefefd" stroke-width="1.5"/>
-              <line x1="2.53033" y1="1.46967" x2="20.208" y2="19.1473" stroke="#fefefd" stroke-width="1.5"/>
-            </svg>
-          </div>
+        <div class="menu">
+        <button class="burger-menu" id="burger-menu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
         </div>
         <!--      logo-->
         <a class="logo light" href="#">
